# ncdb-tools

./: .gitignore  CHANGELOG.md  CLAUDE.md  MANIFEST.in  README.md  pyproject.toml  test_build_database.py  test_ncdb_tools.py
.claude/rules/: ncdb-conventions.md
docs/: column_labels.rtf  column_widths.rtf  label_library.rtf
examples/: basic_usage.py
scripts/: test_build_database.py  test_ncdb_tools.py
src/ncdb_tools/: __init__.py  builder.py  config.py  constants.py  data_dictionary.py  database_builder.py  dataset_builder.py  query.py
src/ncdb_tools/_internal/: __init__.py  ingest.py  inspect.py  memory_utils.py  sas_parser.py  transform.py  validation.py
tests/: conftest.py  test_builder.py  test_config.py  test_data_dictionary.py  test_memory_utils.py  test_query.py
